update to component

--- a/11ty/index.html
+++ b/11ty/index.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-<h1 class="border-2 border-red m-auto mt-4 text-center text-blue w-1/2">Hello World</h1>
+<h1 class="border-2 border-orange m-auto mt-4 text-center text-green w-1/2">Hello World!</h1>
 <div id="app"></div>
